@@ -36,7 +36,6 @@ import com.google.devtools.kythe.analyzers.java.SourceText.Keyword;
 import com.google.devtools.kythe.analyzers.java.SourceText.Positions;
 import com.google.devtools.kythe.analyzers.jvm.JvmGraph;
 import com.google.devtools.kythe.analyzers.jvm.JvmGraph.Type.ReferenceType;
-import com.google.devtools.kythe.platform.java.filemanager.ForwardingStandardJavaFileManager;
 import com.google.devtools.kythe.platform.java.helpers.JCTreeScanner;
 import com.google.devtools.kythe.platform.java.helpers.JavacUtil;
 import com.google.devtools.kythe.platform.java.helpers.SignatureGenerator;
@@ -291,7 +290,12 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     if (ident.sym == null) {
       return emitDiagnostic(ctx, "missing identifier symbol", null, null);
     }
-    JavaNode node = emitSymUsage(ctx, ident.sym);
+    EdgeKind edgeKind = EdgeKind.REF;
+    if (ident.sym instanceof ClassSymbol && ident == owner.getNewClassIdentifier()) {
+      // Use ref/id edges for the primary identifier to disambiguate from the constructor.
+      edgeKind = EdgeKind.REF_ID;
+    }
+    JavaNode node = emitSymUsage(ctx, ident.sym, edgeKind);
     if (node != null && ident.sym instanceof VarSymbol) {
       // Emit typed edges for "this"/"super" on reference since there is no definition location.
       // TODO(schroederc): possibly add implicit definition on class declaration
@@ -360,7 +364,7 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
 
     // Generic classes record the source range of the class name for the abs node, regular
     // classes record the source range of the class name for the record node.
-    EntrySet absNode =
+    VName absNode =
         defineTypeParameters(
             ctx,
             classNode,
@@ -374,10 +378,10 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
       if (classIdent != null) {
         EntrySet absAnchor =
             entrySets.newAnchorAndEmit(filePositions, classIdent, ctx.getSnippet());
-        emitDefinesBindingEdge(classIdent, absAnchor, absNode.getVName(), getScope(ctx));
+        emitDefinesBindingEdge(classIdent, absAnchor, absNode, getScope(ctx));
       }
       if (!documented) {
-        emitComment(classDef, absNode.getVName());
+        emitComment(classDef, absNode);
       }
     }
     if (absNode == null && classIdent != null) {
@@ -538,7 +542,7 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     emitModifiers(methodNode, methodDef.getModifiers());
     emitVisibility(methodNode, methodDef.getModifiers(), ctx);
 
-    EntrySet absNode =
+    VName absNode =
         defineTypeParameters(
             ctx, methodNode, methodDef.getTypeParameters(), wildcards, markedSource.build());
     boolean documented = visitDocComment(methodNode, absNode, methodDef.getModifiers());
@@ -596,13 +600,13 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
         emitComment(methodDef, methodNode);
       }
       if (absNode != null) {
-        emitAnchor(bindingAnchor, EdgeKind.DEFINES_BINDING, absNode.getVName(), getScope(ctx));
+        emitAnchor(bindingAnchor, EdgeKind.DEFINES_BINDING, absNode, getScope(ctx));
         Span span = filePositions.findIdentifier(methodDef.name, methodDef.getPreferredPosition());
         if (span != null) {
-          emitMetadata(span, absNode.getVName());
+          emitMetadata(span, absNode);
         }
         if (!documented) {
-          emitComment(methodDef, absNode.getVName());
+          emitComment(methodDef, absNode);
         }
       }
       emitAnchor(ctx, EdgeKind.DEFINES, methodNode);
@@ -656,10 +660,8 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     emitAnchor(ctx, EdgeKind.DEFINES, lambdaNode);
 
     for (Type target : getTargets(lambda)) {
-      if (target != null) {
-        VName targetNode = getNode(target.asElement());
-        entrySets.emitEdge(lambdaNode, EdgeKind.EXTENDS, targetNode);
-      }
+      VName targetNode = getNode(target.asElement());
+      entrySets.emitEdge(lambdaNode, EdgeKind.EXTENDS, targetNode);
     }
 
     scan(lambda.body, ctx);
@@ -668,21 +670,10 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
   }
 
   private static Iterable<Type> getTargets(JCFunctionalExpression node) {
-    try {
-      @SuppressWarnings("unchecked")
-      Iterable<Type> targets =
-          (Iterable<Type>) JCFunctionalExpression.class.getField("targets").get(node);
-      return targets != null ? targets : ImmutableList.of();
-    } catch (ReflectiveOperationException e) {
-      // continue below
+    if (node == null || node.target == null) {
+      return ImmutableList.of();
     }
-    try {
-      // Work with the field rename in JDK 11: http://hg.openjdk.java.net/jdk/jdk11/rev/f854b76b6a0c
-      return com.sun.tools.javac.util.List.of(
-          (Type) JCFunctionalExpression.class.getField("target").get(node));
-    } catch (ReflectiveOperationException e) {
-      throw new LinkageError(e.getMessage(), e);
-    }
+    return ImmutableList.of(node.target);
   }
 
   @Override
@@ -711,7 +702,7 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
         entrySets.getNode(
             signatureGenerator, varDef.sym, signature.get(), null, markedSourceChildren);
     boolean documented = visitDocComment(varNode, null, varDef.getModifiers());
-    emitDefinesBindingAnchorEdge(ctx, varDef.name, varDef.getStartPosition(), varNode);
+    emitDefinesBindingAnchorEdge(ctx, varDef.name, varDef.getPreferredPosition(), varNode);
     emitAnchor(ctx, EdgeKind.DEFINES, varNode);
     if (varDef.sym.getKind().isField() && !documented) {
       // emit comments for fields and enumeration constants
@@ -773,7 +764,10 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     EntrySet typeNode =
         entrySets.newTApplyAndEmit(typeCtorNode.getVName(), argVNames, MarkedSources.GENERIC_TAPP);
     // TODO(salguarnieri) Think about removing this since it isn't something that we have a use for.
-    emitAnchor(ctx, EdgeKind.REF, typeNode.getVName());
+    emitAnchor(
+        ctx,
+        (owner.getTree() instanceof JCNewClass) ? EdgeKind.REF_ID : EdgeKind.REF,
+        typeNode.getVName());
 
     return new JavaNode(typeNode, childWildcards.build());
   }
@@ -841,7 +835,7 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
       if (!field.name.contentEquals("*")) {
         String msg = "Could not determine selected Symbol for " + field;
         if (config.getVerboseLogging()) {
-          logger.atWarning().log(msg);
+          logger.atWarning().log("%s", msg);
         }
         return emitDiagnostic(ctx, msg, null, null);
       }
@@ -891,7 +885,7 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     TreeContext ctx = owner.down(newClass);
 
     if (newClass == null || newClass.constructor == null) {
-      logger.atInfo().log("Unexpected null class or constructor: %s", newClass);
+      logger.atWarning().log("Unexpected null class or constructor: %s", newClass);
       return emitDiagnostic(ctx, "error analyzing class", null, null);
     }
     VName ctorNode = getNode(newClass.constructor);
@@ -1020,8 +1014,7 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     return scanAll(owner.downAsSnippet(assgnOp), assgnOp.lhs, assgnOp.rhs);
   }
 
-  private boolean visitDocComment(VName node, EntrySet absNode, JCModifiers modifiers) {
-    // TODO(#1501): always use absNode
+  private boolean visitDocComment(VName node, VName absNode, JCModifiers modifiers) {
     Optional<String> deprecation = Optional.empty();
     boolean documented = false;
     if (docScanner != null) {
@@ -1061,7 +1054,7 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     }
     emitDeprecated(deprecation, node);
     if (absNode != null) {
-      emitDeprecated(deprecation, absNode.getVName());
+      emitDeprecated(deprecation, absNode);
     }
     return documented;
   }
@@ -1091,6 +1084,9 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
   }
 
   boolean emitCommentsOnLine(int line, VName node, int defLine) {
+    if (!config.getEmitDocForNonJavadoc()) {
+      return false;
+    }
     List<Comment> lst = comments.get(line);
     if (lst == null || commentClaims.computeIfAbsent(line, l -> defLine) != defLine) {
       return false;
@@ -1110,12 +1106,8 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     return Streams.stream(nodes).map(JavaNode::getVName).collect(Collectors.toList());
   }
 
-  // TODO When we want to refer to a type or method that is generic, we need to point to the abs
-  // node. The code currently does not have an easy way to access that node but this method might
-  // offer a way to change that.
-  // See #1501 for more discussion and detail.
   /** Create an abs node if we have type variables or if we have wildcards. */
-  private EntrySet defineTypeParameters(
+  private VName defineTypeParameters(
       TreeContext ownerContext,
       VName owner,
       List<JCTypeParameter> params,
@@ -1154,7 +1146,12 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     // public static <T> void foo(Ty<?> a, Obj<?, ?> b, Obj<Ty<?>, Ty<?>> c) should declare an abs
     // node that has 1 named absvar (T) and 5 unnamed absvars.
     typeParams.addAll(wildcards);
-    return entrySets.newAbstractAndEmit(owner, typeParams, markedSource);
+
+    if (!config.getGenericsStructure().equals(JavaIndexerConfig.GenericsStructure.TPARAM)) {
+      return entrySets.newAbstractAndEmit(owner, typeParams, markedSource).getVName();
+    }
+    entrySets.emitOrdinalEdges(owner, EdgeKind.TPARAM, typeParams);
+    return owner;
   }
 
   /** Returns the node associated with a {@link Symbol} or {@code null}. */
@@ -1222,17 +1219,16 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     }
   }
 
-  // Emits a node for the given sym, an anchor encompassing the TreeContext, and a REF edge
-  private JavaNode emitSymUsage(TreeContext ctx, Symbol sym) {
+  // Emits a node for the given sym, an anchor encompassing the TreeContext, and the given edge.
+  private JavaNode emitSymUsage(TreeContext ctx, Symbol sym, EdgeKind edgeKind) {
     JavaNode node = getRefNode(ctx, sym);
     if (node == null) {
       // TODO(schroederc): details
       return emitDiagnostic(ctx, "failed to resolve symbol reference", null, null);
     }
-
     // TODO(schroederc): emit reference to JVM node if `sym.outermostClass()` is not defined in a
     //                   .java source file
-    emitAnchor(ctx, EdgeKind.REF, node.getVName());
+    emitAnchor(ctx, edgeKind, node.getVName());
     statistics.incrementCounter("symbol-usages-emitted");
     return node;
   }
@@ -1331,7 +1327,8 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
         signatureGenerator.setArrayTypeContext(((JCFieldAccess) ctx.getTree()).selected.type);
       }
       JavaNode node = getJavaNode(sym);
-      if (node != null
+      if (!config.getGenericsStructure().equals(JavaIndexerConfig.GenericsStructure.TPARAM)
+          && node != null
           && sym instanceof ClassSymbol
           && inGenericContext
           && !sym.getTypeParameters().isEmpty()) {
@@ -1360,11 +1357,11 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
   // Returns a JavaNode representing java.lang.Enum<E> where E is a given enum type.
   private JavaNode getJavaLangEnumNode(VName enumVName) {
     if (javaLangEnumNode == null) {
-      javaLangEnumNode =
-          new JavaNode(
-              entrySets
-                  .newAbstractAndEmit(resolveJavaLangSymbol(getSymbols().enumSym).getVName())
-                  .getVName());
+      VName v = resolveJavaLangSymbol(getSymbols().enumSym).getVName();
+      if (!config.getGenericsStructure().equals(JavaIndexerConfig.GenericsStructure.TPARAM)) {
+        v = entrySets.newAbstractAndEmit(v).getVName();
+      }
+      javaLangEnumNode = new JavaNode(v);
     }
     EntrySet typeNode =
         entrySets.newTApplyAndEmit(
@@ -1467,7 +1464,6 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     }
     EntrySet doc =
         entrySets.newDocAndEmit(kind.getDocSubkind(), filePositions, bracketedText, paramNodes);
-    // TODO(#1501): always use absNode
     entrySets.emitEdge(doc.getVName(), EdgeKind.DOCUMENTS, node);
     if (absNode != null) {
       entrySets.emitEdge(doc.getVName(), EdgeKind.DOCUMENTS, absNode);
@@ -1671,16 +1667,8 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
   /** Resovles a string as a source-file relative path */
   private String resolveSourcePath(String path) {
     try {
-      // TODO(shahms): Remove this cast/check/fallback when we only support JDK9+.
-      if (fileManager instanceof ForwardingStandardJavaFileManager) {
-        return ((ForwardingStandardJavaFileManager) fileManager)
-            .asPath(filePositions.getSourceFile())
-            .resolveSibling(path)
-            .toString();
-      }
-    } catch (UnsupportedOperationException
-        | IllegalArgumentException
-        | NullPointerException unused) {
+      return fileManager.asPath(filePositions.getSourceFile()).resolveSibling(path).toString();
+    } catch (UnsupportedOperationException unused) {
       // Do nothing; perform fallback below
     }
     // Fallback to URI-based path resolution when asPath is unsupported.
